<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".DetailMovie">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/black" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster" />

        <TextView
            android:id="@+id/language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/originalLanguage"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_originalLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/originalLanguage"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/language"
            app:layout_constraintStart_toEndOf="@+id/language"
            app:layout_constraintTop_toTopOf="@+id/language" />

        <ImageView
            android:id="@+id/img_star"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginEnd="68dp"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:text="@string/rating"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_star"
            app:layout_constraintStart_toEndOf="@+id/img_star"
            app:layout_constraintTop_toTopOf="@+id/img_star"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date_release"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/language"
            app:layout_constraintTop_toBottomOf="@+id/language" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/release"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/release"
            app:layout_constraintTop_toBottomOf="@+id/release" />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/popularity"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_release"
            app:layout_constraintTop_toBottomOf="@+id/tv_release" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/popularity"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/popularity"
            app:layout_constraintTop_toBottomOf="@+id/popularity" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_popularity"
            app:layout_constraintTop_toBottomOf="@+id/tv_popularity" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="24dp"
            android:text="@string/overview"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/overview"
            app:layout_constraintTop_toBottomOf="@+id/overview" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/fav_button"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="@+id/img_poster"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>